Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-118565

VirtualKeyboard documentation incorrect

    XMLWordPrintable

Details

    • Bug
    • Resolution: Fixed
    • P2: Important
    • 6.6.1, 6.7.0 FF
    • 6.6.0
    • Virtual Keyboard
    • None
    • 13d007df6 (dev), 8cdc89faf (6.6), 5d9b3a10b (dev), 2e8dbd33c (6.6)

    Description

      https://doc.qt.io/qt-6/qml-qtquick-virtualkeyboard-virtualkeyboard.html

      There does not seem to be such type exported to QML and 'dictionaries' property does not exist in the class either (is extraDictionaries)

      Attachments

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

        Activity

          People

            poikelin Joni Poikelin
            poikelin Joni Poikelin
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes