Fix VirtualKeyboard attached properties

VirtualKeyboard attached type was missing QML_NAMED_ELEMENT and
QML_UNCREATABLE rendering it useless.

Add missing type definitions and also fix the documentation.

Add a simple automated test which checks the availability of the
existing attached properties.

Fixes: QTBUG-118565
Change-Id: I9297dfab9b7168e65e35f78738be3fb46b1fe8bc
Reviewed-by: Mitch Curtis <mitch.curtis@qt.io>
(cherry picked from commit 13d007df695be24de6744468a66b00c92d25e212)
Reviewed-by: Qt Cherry-pick Bot <cherrypick_bot@qt-project.org>